k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-server-service
                port:
                  number: 80
